--- a/snooker.html
+++ b/snooker.html
@@ -186,7 +186,7 @@
         <div class="flex justify-between items-end w-full">
             <div class="interactive">
                 <button onclick="toggleSetup()" class="p-3 bg-gray-800 rounded-full hover:bg-gray-700 text-white shadow-lg border border-gray-600 transition">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z" /><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" /></svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z" /><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" /></svg>
                 </button>
             </div>
 
@@ -339,7 +339,7 @@
 
         // --- POCKETS ---
         function createVisualPockets(container, w, h) {
-            const size = 60; // Increased visual size from 50
+            const size = 80; // INCREASED VISUAL SIZE
             const cornerOffset = BORDER_SIZE * 0.8;
             const midX = w / 2;
             const midY = BORDER_SIZE * 0.5; // Tucked into rail
@@ -365,7 +365,7 @@
         }
 
         function createPhysicsPockets() {
-            const r = 25; // Sensor radius
+            const r = 40; // INCREASED PHYSICS RADIUS (Diameter 80)
             const opt = { isStatic: true, isSensor: true, label: 'POCKET', render: { fillStyle: 'transparent' } }; 
             
             // Align physics pockets with visual pockets
