--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body class="min-h-screen flex flex-col items-center justify-center p-6 bg-[url('https://www.transparenttextures.com/patterns/dark-leather.png')]">
 
     <div class="max-w-6xl w-full text-center">
-        <!-- Logo (Updated to local file) -->
+        <!-- Logo -->
         <img src="logo.png" alt="British Hills" class="h-24 mx-auto mb-8 invert opacity-90">
         
         <h1 class="serif-font text-4xl md:text-5xl text-amber-500 mb-2">Classroom Activities</h1>
@@ -80,6 +80,17 @@
                 </div>
                 <h2 class="serif-font text-2xl text-white mb-2 group-hover:text-amber-400 transition">Scoreboard</h2>
                 <p class="text-gray-400 text-sm">Universal scoring utility. Unlimited teams, custom points, dynamic grid.</p>
+            </a>
+
+            <!-- NEW Game 6: Assault the Castle -->
+            <!-- Link points to the FOLDER -->
+            <a href="assault/" class="game-card block p-6 rounded-xl border border-gray-700 group">
+                <div class="h-32 bg-gray-800 rounded-lg mb-4 flex items-center justify-center relative overflow-hidden">
+                    <div class="absolute inset-0 bg-black opacity-30 group-hover:opacity-10 transition"></div>
+                    <span class="text-4xl">🛡️</span>
+                </div>
+                <h2 class="serif-font text-2xl text-white mb-2 group-hover:text-amber-400 transition">Assault the Castle</h2>
+                <p class="text-gray-400 text-sm">New advanced engine. Defend your fortress in this interactive battle.</p>
             </a>
 
         </div>
