--- a/index.html
+++ b/index.html
@@ -82,15 +82,14 @@
                 <p class="text-gray-400 text-sm">Universal scoring utility. Unlimited teams, custom points, dynamic grid.</p>
             </a>
 
-            <!-- NEW Game 6: Assault the Castle -->
-            <!-- Link points to the FOLDER -->
-            <a href="assault/" class="game-card block p-6 rounded-xl border border-gray-700 group">
-                <div class="h-32 bg-gray-800 rounded-lg mb-4 flex items-center justify-center relative overflow-hidden">
+            <!-- Game 6: Darts -->
+            <a href="darts.html" class="game-card block p-6 rounded-xl border border-gray-700 group">
+                <div class="h-32 bg-red-900 rounded-lg mb-4 flex items-center justify-center relative overflow-hidden">
                     <div class="absolute inset-0 bg-black opacity-30 group-hover:opacity-10 transition"></div>
-                    <span class="text-4xl">🛡️</span>
+                    <span class="text-4xl">🎯</span>
                 </div>
-                <h2 class="serif-font text-2xl text-white mb-2 group-hover:text-amber-400 transition">Assault the Castle</h2>
-                <p class="text-gray-400 text-sm">New advanced engine. Defend your fortress in this interactive battle.</p>
+                <h2 class="serif-font text-2xl text-white mb-2 group-hover:text-amber-400 transition">Classroom Darts</h2>
+                <p class="text-gray-400 text-sm">Flick to throw. Automatic scoring. 4 Teams.</p>
             </a>
 
         </div>
