--- a/index.html
+++ b/index.html
@@ -102,6 +102,16 @@
                 <p class="text-gray-400 text-sm">New advanced engine. Defend your fortress in this interactive battle.</p>
             </a>
 
+            <!-- Game 8: Manor House Monsters -->
+            <a href="https://bhteach.github.io/british-hills-games/monster_attack.html" class="game-card block p-6 rounded-xl border border-gray-700 group">
+                <div class="h-32 bg-indigo-900 rounded-lg mb-4 flex items-center justify-center relative overflow-hidden">
+                    <div class="absolute inset-0 bg-black opacity-30 group-hover:opacity-10 transition"></div>
+                    <span class="text-4xl">👹</span>
+                </div>
+                <h2 class="serif-font text-2xl text-white mb-2 group-hover:text-amber-400 transition">Manor House Monsters</h2>
+                <p class="text-gray-400 text-sm">Battle against the monsters invading the British Hills Manor.</p>
+            </a>
+
         </div>
         
         <footer class="mt-12 text-gray-500 text-sm">
