--- a/monster_attack.html
+++ b/monster_attack.html
@@ -83,8 +83,8 @@
                 id: 2,
                 name: "Queen's Room",
                 monsterName: "Spectral Knight",
-                question: "What color are the famous double-decker buses in London?",
-                answers: ["red", "it is red", "they are red"],
+                question: "Who was the longest reigning queen of the UK?",
+                answers: ["elizabeth", "elizabeth the second"],
                 videoSrc: "./assets/queens.mp4"
             },
             {
@@ -94,6 +94,30 @@
                 question: "How many countries are in the United Kingdom?",
                 answers: ["four", "4"],
                 videoSrc: "./assets/kings.mp4"
+            },
+            {
+                id: 4,
+                name: "The Library",
+                monsterName: "Ancient Lich",
+                question: "Who wrote 'Romeo and Juliet'?",
+                answers: ["shakespeare", "william shakespeare"],
+                videoSrc: "./assets/library.mp4"
+            },
+            {
+                id: 5,
+                name: "The Refectory",
+                monsterName: "Goblin Cook",
+                question: "What is the traditional British dish of fish and...?",
+                answers: ["chips", "chip"],
+                videoSrc: "./assets/refectory.mp4"
+            },
+            {
+                id: 6,
+                name: "Drawing Room",
+                monsterName: "Portrait Ghost",
+                question: "Which city is the capital of Scotland?",
+                answers: ["edinburgh"],
+                videoSrc: "./assets/drawing.mp4"
             }
         ];
 
