--- a/monster_attack.html
+++ b/monster_attack.html
@@ -407,7 +407,7 @@
                                 <div className="text-center">
                                     <button 
                                         onClick={handleEncounter}
-                                        className="px-16 py-8 bg-red-700 hover:bg-red-600 text-white text-4xl md:text-6xl font-fantasy font-bold rounded-lg border-4 border-yellow-500 shadow-[0_0_50px_rgba(220,38,38,0.5)] transition-transform hover:scale-105 active:scale-95"
+                                        className="px-16 py-8 bg-red-900/60 backdrop-blur-sm hover:bg-red-800/80 text-white text-4xl md:text-6xl font-fantasy font-bold rounded-lg border-4 border-yellow-500 shadow-[0_0_50px_rgba(220,38,38,0.5)] transition-transform hover:scale-105 active:scale-95"
                                     >
                                         ENCOUNTER
                                     </button>
