--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             </a>
 
             <!-- 4. Vocabulary Challenge -->
-            <a href="vocabulary.html" class="game-card block p-6 rounded-xl border border-gray-700 group">
+            <a href="vocabularychallenge.html" class="game-card block p-6 rounded-xl border border-gray-700 group">
                 <div class="h-32 bg-rose-900 rounded-lg mb-4 flex items-center justify-center relative overflow-hidden">
                     <div class="absolute inset-0 bg-black opacity-30 group-hover:opacity-10 transition"></div>
                     <span class="text-4xl">🔤</span>
