--- a/vocabularychallenge.html
+++ b/vocabularychallenge.html
@@ -160,6 +160,16 @@
                 { id: 'cow', keywords: ['cow'], type: 'image', val: 'assets/cow.jpg' },
                 { id: 'duck', keywords: ['duck'], type: 'image', val: 'assets/duck.jpg' },
                 { id: 'fox', keywords: ['fox'], type: 'image', val: 'assets/fox.jpg' }
+            ],
+            countries: [
+                { id: 'south_africa', keywords: ['south africa'], type: 'image', val: 'assets/southafrica.png' },
+                { id: 'japan', keywords: ['japan'], type: 'image', val: 'assets/japan.png' },
+                { id: 'trinidad', keywords: ['trinidad', 'tobago'], type: 'image', val: 'assets/trinidad-and-tobago.png' },
+                { id: 'jamaica', keywords: ['jamaica'], type: 'image', val: 'assets/jamaica.png' },
+                { id: 'canada', keywords: ['canada'], type: 'image', val: 'assets/canada.png' },
+                { id: 'uk', keywords: ['uk', 'united kingdom', 'britain', 'england'], type: 'image', val: 'assets/uk.png' },
+                { id: 'new_zealand', keywords: ['new zealand'], type: 'image', val: 'assets/newzealand.png' },
+                { id: 'australia', keywords: ['australia'], type: 'image', val: 'assets/australia.png' }
             ]
         };
 
