--- a/monster_attack.html
+++ b/monster_attack.html
@@ -105,7 +105,7 @@
                 monsterName: "Ghost", 
                 videoSrc: "./assets/refectory.mp4", 
                 defeatVideoSrc: "./assets/refectorydefeat.mp4",
-                lossVideoSrc: null // Skipped as requested
+                lossVideoSrc: "./assets/refectoryloss.mp4"
             },
             { 
                 id: 4, 
@@ -129,7 +129,7 @@
                 monsterName: "Bear", 
                 videoSrc: "./assets/kings.mp4", 
                 defeatVideoSrc: "./assets/kingsdefeat.mp4",
-                lossVideoSrc: "./assets/kingloss.mp4"
+                lossVideoSrc: "./assets/kingsloss.mp4"
             }
         ];
 
