--- a/mouserace.html
+++ b/mouserace.html
@@ -196,7 +196,7 @@
                     [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1],
                 ],
                 start: { x: 1, y: 1, dir: 1 },
-                cat: { x: 5, y: 5 } // Cat in middle!
+                cat: { x: 9, y: 9 } // CHANGED: Cat at bottom right
             },
             WINTER: {
                 name: "Winter Kingdom",
@@ -234,7 +234,7 @@
                     [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1],
                 ],
                 start: { x: 1, y: 1, dir: 2 }, // Facing Down
-                cat: { x: 5, y: 5 }
+                cat: { x: 9, y: 9 } // CHANGED: Cat at bottom right
             }
         };
 
