--- a/vocabularychallenge.html
+++ b/vocabularychallenge.html
@@ -170,6 +170,16 @@
                 { id: 'uk', keywords: ['uk', 'united kingdom', 'britain', 'england'], type: 'image', val: 'assets/uk.png' },
                 { id: 'new_zealand', keywords: ['new zealand'], type: 'image', val: 'assets/newzealand.png' },
                 { id: 'australia', keywords: ['australia'], type: 'image', val: 'assets/australia.png' }
+            ],
+            shapes: [
+                { id: 'triangle', keywords: ['triangle'], type: 'image', val: 'assets/triangle.png' },
+                { id: 'rectangle', keywords: ['rectangle'], type: 'image', val: 'assets/rectangle.png' },
+                { id: 'circle', keywords: ['circle'], type: 'image', val: 'assets/circle.png' },
+                { id: 'square', keywords: ['square'], type: 'image', val: 'assets/square.png' },
+                { id: 'heart', keywords: ['heart', 'love'], type: 'image', val: 'assets/heart.png' },
+                { id: 'star', keywords: ['star'], type: 'image', val: 'assets/star.png' },
+                { id: 'diamond', keywords: ['diamond'], type: 'image', val: 'assets/diamond.png' },
+                { id: 'oval', keywords: ['oval'], type: 'image', val: 'assets/oval.png' }
             ]
         };
 
