--- a/hangman.html
+++ b/hangman.html
@@ -217,7 +217,7 @@
 
             // --- Screens ---
 
-            const SetupScreen = () => (
+            const renderSetupScreen = () => (
                 <div className="max-w-2xl mx-auto bg-white p-8 rounded-2xl shadow-xl border-4 border-blue-100 mt-10">
                 <div className="flex items-center gap-3 mb-6 border-b pb-4">
                     <Settings className="w-8 h-8 text-blue-600" />
@@ -289,7 +289,7 @@
                 </div>
             );
 
-            const PlayingScreen = () => {
+            const renderPlayingScreen = () => {
                 const isRoundOver = gameState === 'round-end';
                 const roundWon = isRoundOver && wrongGuesses < MAX_LIVES;
 
@@ -416,7 +416,7 @@
                 );
             };
 
-            const GameOverScreen = () => {
+            const renderGameOverScreen = () => {
                 const maxScore = Math.max(...scores);
                 const winners = scores
                 .map((score, index) => score === maxScore ? index + 1 : null)
@@ -455,9 +455,9 @@
 
             return (
                 <div className="min-h-screen">
-                {gameState === 'setup' && <SetupScreen />}
-                {(gameState === 'playing' || gameState === 'round-end') && <PlayingScreen />}
-                {gameState === 'game-over' && <GameOverScreen />}
+                {gameState === 'setup' && renderSetupScreen()}
+                {(gameState === 'playing' || gameState === 'round-end') && renderPlayingScreen()}
+                {gameState === 'game-over' && renderGameOverScreen()}
                 </div>
             );
         }
