--- a/hangman.html
+++ b/hangman.html
@@ -47,6 +47,7 @@
         const Users = (props) => <IconBase {...props}><path d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"/><circle cx="9" cy="7" r="4"/><path d="M22 21v-2a4 4 0 0 0-3-3.87"/><path d="M16 3.13a4 4 0 0 1 0 7.75"/></IconBase>;
         const Type = (props) => <IconBase {...props}><polyline points="4 7 4 4 20 4 20 7"/><line x1="9" y1="20" x2="15" y2="20"/><line x1="12" y1="4" x2="12" y2="20"/></IconBase>;
         const ArrowRight = (props) => <IconBase {...props}><path d="M5 12h14"/><path d="m12 5 7 7-7 7"/></IconBase>;
+        const Lightbulb = (props) => <IconBase {...props}><path d="M15 14c.2-1 .7-1.7 1.5-2.5 1-1 1.5-2 1.5-3.5A6 6 0 0 0 6 8c0 1 .5 2 1.5 3.5.7.7 1.3 1.5 1.5 2.5"/><path d="M9 18h6"/><path d="M10 22h4"/></IconBase>;
 
         // --- COMPONENTS ---
 
@@ -106,7 +107,8 @@
             const [config, setConfig] = useState({
                 numRounds: 1,
                 teamCount: 2,
-                words: ['']
+                words: [''],
+                hints: ['']
             });
 
             // Gameplay State
@@ -115,6 +117,7 @@
             const [activeTeam, setActiveTeam] = useState(0);
             const [guessedLetters, setGuessedLetters] = useState(new Set());
             const [wrongGuesses, setWrongGuesses] = useState(0);
+            const [showHint, setShowHint] = useState(false);
 
             // Constants
             const MAX_LIVES = 6;
@@ -146,14 +149,25 @@
                 setConfig(prev => ({ ...prev, words: newWords }));
             };
 
+            const handleHintInput = (index, value) => {
+                const newHints = [...config.hints];
+                newHints[index] = value;
+                setConfig(prev => ({ ...prev, hints: newHints }));
+            };
+
             const adjustRounds = (count) => {
                 const newWords = [...config.words];
+                const newHints = [...config.hints];
                 if (count > newWords.length) {
-                for (let i = newWords.length; i < count; i++) newWords.push('');
+                    for (let i = newWords.length; i < count; i++) {
+                        newWords.push('');
+                        newHints.push('');
+                    }
                 } else {
-                newWords.splice(count);
+                    newWords.splice(count);
+                    newHints.splice(count);
                 }
-                setConfig(prev => ({ ...prev, numRounds: count, words: newWords }));
+                setConfig(prev => ({ ...prev, numRounds: count, words: newWords, hints: newHints }));
             };
 
             const startGame = () => {
@@ -167,6 +181,7 @@
                 setCurrentRound(roundIndex);
                 setGuessedLetters(new Set());
                 setWrongGuesses(0);
+                setShowHint(false);
                 setGameState('playing');
             };
 
@@ -212,7 +227,7 @@
 
             const resetGame = () => {
                 setGameState('setup');
-                setConfig({ numRounds: 1, teamCount: 2, words: [''] });
+                setConfig({ numRounds: 1, teamCount: 2, words: [''], hints: [''] });
             };
 
             // --- Screens ---
@@ -259,17 +274,28 @@
                     <label className="block text-gray-700 font-bold mb-4 text-lg flex items-center gap-2">
                         <Type className="w-5 h-5" /> Secret Words / Phrases
                     </label>
-                    <div className="space-y-3">
+                    <div className="space-y-4">
                         {config.words.map((word, idx) => (
-                        <div key={idx} className="flex items-center gap-3">
-                            <span className="font-bold text-gray-400 w-8">#{idx + 1}</span>
-                            <input
-                            type="text"
-                            placeholder="Enter secret word..."
-                            className="flex-1 p-3 border-2 border-gray-300 rounded-lg text-lg uppercase tracking-wider font-mono focus:border-blue-500 outline-none"
-                            value={word}
-                            onChange={(e) => handleWordInput(idx, e.target.value)}
-                            />
+                        <div key={idx} className="flex flex-col gap-2 p-2 rounded hover:bg-gray-100/50 transition-colors">
+                            <div className="flex items-center gap-3">
+                                <span className="font-bold text-gray-400 w-8">#{idx + 1}</span>
+                                <input
+                                    type="text"
+                                    placeholder="Enter secret word..."
+                                    className="flex-1 p-3 border-2 border-gray-300 rounded-lg text-lg uppercase tracking-wider font-mono focus:border-blue-500 outline-none"
+                                    value={word}
+                                    onChange={(e) => handleWordInput(idx, e.target.value)}
+                                />
+                            </div>
+                             <div className="flex items-center gap-3 ml-11">
+                                <input
+                                    type="text"
+                                    placeholder="Optional hint (e.g. 'Capital of France')"
+                                    className="flex-1 p-2 border border-gray-200 rounded-lg text-sm text-gray-600 focus:border-blue-400 outline-none bg-white"
+                                    value={config.hints[idx] || ''}
+                                    onChange={(e) => handleHintInput(idx, e.target.value)}
+                                />
+                            </div>
                         </div>
                         ))}
                     </div>
@@ -292,6 +318,7 @@
             const renderPlayingScreen = () => {
                 const isRoundOver = gameState === 'round-end';
                 const roundWon = isRoundOver && wrongGuesses < MAX_LIVES;
+                const currentHint = config.hints[currentRound];
 
                 return (
                 <div className="flex flex-col h-full max-w-7xl mx-auto p-4">
@@ -337,19 +364,39 @@
                     </div>
 
                     <div className="lg:col-span-8 flex flex-col gap-6 order-1 lg:order-2">
-                        <div className="bg-slate-800 rounded-2xl p-6 md:p-8 shadow-inner flex flex-wrap gap-3 justify-center items-center min-h-[160px]">
-                        {puzzleState.display.map((char, i) => (
-                            <span 
-                            key={i}
-                            className={`w-10 md:w-12 h-14 md:h-16 flex items-end justify-center text-4xl md:text-5xl font-mono font-bold select-none ${
-                                char === '_' 
-                                ? 'text-slate-600 border-b-4 border-slate-500' 
-                                : 'text-white border-b-4 border-transparent animate-bounce-short'
-                            }`}
-                            >
-                            {char}
-                            </span>
-                        ))}
+                        <div className="bg-slate-800 rounded-2xl p-6 md:p-8 shadow-inner flex flex-col justify-center items-center min-h-[160px]">
+                            <div className="flex flex-wrap gap-3 justify-center mb-6">
+                            {puzzleState.display.map((char, i) => (
+                                <span 
+                                key={i}
+                                className={`w-10 md:w-12 h-14 md:h-16 flex items-end justify-center text-4xl md:text-5xl font-mono font-bold select-none ${
+                                    char === '_' 
+                                    ? 'text-slate-600 border-b-4 border-slate-500' 
+                                    : 'text-white border-b-4 border-transparent animate-bounce-short'
+                                }`}
+                                >
+                                {char}
+                                </span>
+                            ))}
+                            </div>
+
+                             {currentHint && (
+                                <div className="w-full flex justify-center">
+                                    {!showHint ? (
+                                        <button 
+                                            onClick={() => setShowHint(true)}
+                                            className="text-blue-300 hover:text-white font-bold transition-colors flex items-center gap-2 bg-slate-700/50 px-4 py-2 rounded-full text-sm"
+                                        >
+                                            <Lightbulb className="w-4 h-4" /> Show Hint
+                                        </button>
+                                    ) : (
+                                        <div className="bg-yellow-500/20 border border-yellow-500/50 text-yellow-200 px-6 py-3 rounded-xl font-medium text-lg animate-in fade-in slide-in-from-bottom-2 flex items-center gap-2">
+                                            <Lightbulb className="w-5 h-5 text-yellow-400" /> 
+                                            <span className="font-bold text-yellow-400">HINT:</span> {currentHint}
+                                        </div>
+                                    )}
+                                </div>
+                            )}
                         </div>
 
                         <div className="bg-white rounded-2xl shadow-md border-2 border-gray-100 p-4 md:p-6 flex-1">
