--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             </a>
 
             <!-- 8. Manor House Defence -->
-            <a href="manorhousedefence.html" class="game-card block p-6 rounded-xl border border-gray-700 group">
+            <a href="manorhousedefence/manorhousedefence.html" class="game-card block p-6 rounded-xl border border-gray-700 group">
                 <div class="h-32 bg-stone-900 rounded-lg mb-4 flex items-center justify-center relative overflow-hidden">
                     <div class="absolute inset-0 bg-black opacity-30 group-hover:opacity-10 transition"></div>
                     <span class="text-4xl">💂</span>
