--- a/index.html
+++ b/index.html
@@ -173,6 +173,24 @@
 
         </div>
     </div>
+
+    <!-- CATEGORY 3: PERFORMANCES AND SPEECH -->
+    <div class="max-w-6xl w-full mb-12">
+        <h2 class="serif-font text-3xl text-gray-300 mb-6 border-b border-gray-700 pb-2 text-left pl-2">Performances and Speech</h2>
+        
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 text-left">
+
+            <!-- 1. Atmosphere Engine -->
+            <a href="atmosphereengine.html" class="game-card block p-6 rounded-xl border border-gray-700 group">
+                <div class="h-32 bg-zinc-900 rounded-lg mb-4 flex items-center justify-center relative overflow-hidden">
+                    <div class="absolute inset-0 bg-black opacity-30 group-hover:opacity-10 transition"></div>
+                    <span class="text-4xl">🔊</span>
+                </div>
+                <h2 class="serif-font text-2xl text-white group-hover:text-amber-400 transition text-center">Atmosphere Engine</h2>
+            </a>
+
+        </div>
+    </div>
     
     <footer class="mt-12 text-gray-500 text-sm text-center w-full">
         &copy; British Hills Education Department
